--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Build and test
         run: |
           sbt -v -J-Xms2048M -J-Xmx2048M -J-Xss6M -J-XX:ReservedCodeCacheSize=256M -J-Dfile.encoding=UTF-8 clean scalafmtCheckAll test coralogix-kubernetes-operator-app/nativeImage
+          cp -v ./app/target/native-image/coralogix-kubernetes-operator-app $GITHUB_WORKSPACE/coralogix-kubernetes-operator-app
           rm -rf "$HOME/.ivy2/local" || true
           find $HOME/Library/Caches/Coursier/v1        -name "ivydata-*.properties" -delete || true
           find $HOME/.ivy2/cache                       -name "ivydata-*.properties" -delete || true
@@ -39,12 +40,11 @@ jobs:
           find $HOME/.sbt
 
       - name: Build container
-        uses: elgohr/Publish-Docker-Github-Action@master
+        id: docker_build
+        uses: docker/build-push-action@v2
         with:
-          name: coralogix/cx-operator
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          no_push: true # TODO
+          push: false
+          tags: user/app:latest
 
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
