--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,9 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/master' }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Install Helm
         uses: azure/setup-helm@v1
         with:
