--- a/.github/workflows/release-trigger.yml
+++ b/.github/workflows/release-trigger.yml
@@ -20,6 +20,13 @@ jobs:
         uses: azure/setup-helm@v1
         with:
           version: v3.4.0
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Configure Git
         run: |
@@ -32,7 +39,7 @@ jobs:
 
       - name: Tag
         run: |
-          git tag -a ${{ github.event.input.version }} -m ${{ github.event.input.version }}
+          git tag -a ${{ github.event.inputs.version }} -m ${{ github.event.inputs.version }}
 
       - name: Helm release
         run: |
@@ -41,9 +48,15 @@ jobs:
       - name: Commit and push
         run: |
           git add charts -v
-          git commit -m "Release ${{ github.event.input.version }}"
+          git commit -m "Release ${{ github.event.inputs.version }}"
           git push
           git push --tags
+
+      - name: Tag Docker image
+        run: |
+          docker pull coralogixrepo/cx-operator:sha-${{ github.sha }}
+          docker tag coralogixrepo/cx-operator:sha-${{ github.sha }} coralogixrepo/cx-operator:${{ github.event.inputs.version }}
+          docker push coralogixrepo/cx-operator:${{ github.event.inputs.version }}
 
       - name: Create Release
         id: create_release
@@ -51,8 +64,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.event.input.version }}
-          release_name: Release ${{ github.event.input.version }}
-          body: ${{ github.event.input.changelog }}
+          tag_name: ${{ github.event.inputs.version }}
+          release_name: Release ${{ github.event.inputs.version }}
+          body: ${{ github.event.inputs.changelog }}
           draft: false
           prerelease: false
