--- a/charts/cx-operator/templates/rbac-config.yaml
+++ b/charts/cx-operator/templates/rbac-config.yaml
@@ -4,7 +4,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template ".chart.serviceAccount.name" . }}
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
   labels:
     app: {{ .Chart.Name }}
 
@@ -39,7 +39,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: {{ template ".chart.serviceAccount.name" . }}
-    namespace: default
+    namespace: {{ .Release.Namespace }}
 roleRef:
   apiGroup: "rbac.authorization.k8s.io"
   kind: ClusterRole
