Add the CRD resource to the native image

--- a/app/src/graalvm/resource-config.json
+++ b/app/src/graalvm/resource-config.json
@@ -127,7 +127,8 @@
     {"pattern":"\\Qzio/stream/ZTransducer$.class\\E"}, 
     {"pattern":"\\Qzio/stream/ZTransducer.class\\E"}, 
     {"pattern":"\\Qzio/system/package$.class\\E"}, 
-    {"pattern":"\\Qzio/system/package$System$Service$$anon$1.class\\E"}
+    {"pattern":"\\Qzio/system/package$System$Service$$anon$1.class\\E"},
+    {"pattern":"\\Qcrds/crd-coralogix-rule-group-set.yaml\\E"}
   ]},
   "bundles":[]
 }
