--- a/charts/cx-operator/templates/configMap.yaml
+++ b/charts/cx-operator/templates/configMap.yaml
@@ -20,3 +20,15 @@ data:
         }
       }
     }
+
+    resources {
+      rulegroups = [
+        {{- range .Values.config.resources.rulegroups }}
+        {
+          namespace = {{ .namespace }}
+          buffer = {{ if .buffer }}{{ .buffer }}{{ else }}{{ $.Values.config.resources.defaultBuffer }}{{ end }}
+        },
+        {{- end }}
+      ]
+    }
+
