--- a/charts/cx-operator/values.yaml
+++ b/charts/cx-operator/values.yaml
@@ -1,9 +1,14 @@
 config:
+  location: operator.conf
   coralogixApi:
     host: grpc-api.coralogix.com
     port: 443
     tls: true
-  location: operator.conf
+  resources:
+    defaultBuffer: 1024 # applied to all resources/namespaces;
+    rulegroups:
+      - namespace: default
+        # buffer: 1024
 image:
   pullPolicy: IfNotPresent
   repository: coralogixrepo
