--- a/charts/cx-operator/values.yaml
+++ b/charts/cx-operator/values.yaml
@@ -1,18 +1,17 @@
 config:
-  location: operator.conf
   coralogixApi:
     host: grpc-api.coralogix.com
     port: 443
     tls: true
+  location: operator.conf
   resources:
-    defaultBuffer: 1024 # applied to all resources/namespaces;
+    defaultBuffer: 1024
     rulegroups:
-      - namespace: default
-        # buffer: 1024
+    - namespace: default
 image:
   pullPolicy: IfNotPresent
   repository: coralogixrepo
-  tag: 0.1.12
+  tag: 0.1.13
 replicaCount: 1
 resources:
   cpus: 1
