Ability to work on all namespaces

--- a/app/src/main/resources/shared.conf
+++ b/app/src/main/resources/shared.conf
@@ -31,10 +31,6 @@ grpc {
 }
 
 resources {
-  rulegroups = [
-    {
-      namespace = "default"
-      buffer = 1024
-    }
-  ]
+  defaultBuffer = 1024
+  rulegroups = []
 }
