--- a/charts/cx-operator/values.yaml
+++ b/charts/cx-operator/values.yaml
@@ -6,9 +6,9 @@ config:
     tls: true
   resources:
     defaultBuffer: 1024 # applied to all resources/namespaces;
-    rulegroups:
-      - namespace: default
-        # buffer: 1024
+    rulegroups: []
+      # - namespace: default
+      #   buffer: 1024
 image:
   pullPolicy: IfNotPresent
   repository: coralogixrepo
