--- a/charts/cx-operator/values.yaml
+++ b/charts/cx-operator/values.yaml
@@ -5,9 +5,10 @@ config:
     tls: true
   location: operator.conf
   resources:
-    defaultBuffer: 1024
-    rulegroups:
-    - namespace: default
+    defaultBuffer: 1024 # applied to all resources/namespaces;
+    rulegroups: []
+      # - namespace: default
+      #   buffer: 1024
 image:
   pullPolicy: IfNotPresent
   repository: coralogixrepo
