--- a/charts/cx-operator/values.yaml
+++ b/charts/cx-operator/values.yaml
@@ -5,14 +5,12 @@ config:
     tls: true
   location: operator.conf
   resources:
-    defaultBuffer: 1024 # applied to all resources/namespaces;
+    defaultBuffer: 1024
     rulegroups: []
-      # - namespace: default
-      #   buffer: 1024
 image:
   pullPolicy: IfNotPresent
   repository: coralogixrepo
-  tag: 0.1.13
+  tag: 0.1.14
 replicaCount: 1
 resources:
   cpus: 1
