Better build trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
 name: 'Build and publish image'
 on:
   pull_request:
-    branches-ignore:
-      - gh-pages
+    branches:
+      - '**:**'
   push:
     branches-ignore:
       - gh-pages
