--- a/charts/cx-operator/templates/rbac-config.yaml
+++ b/charts/cx-operator/templates/rbac-config.yaml
@@ -24,10 +24,33 @@ rules:
       - rulegroupsets/status
     verbs: ["get", "watch", "update"]
   - apiGroups:
+      - loggers.coralogix.com
+    resources:
+      - coralogixloggers
+      - coralogixloggers/status
+      - coralogixloggers/finalizers
+    verbs: ["get", "watch", "update"]
+  - apiGroups:
       - apiextensions.k8s.io
     resources:
       - customresourcedefinitions
     verbs: ["get", "list", "create", "update"]
+  - apiGroups:
+      - apps
+    resources:
+      - daemonsets
+    verbs: [ "get", "list", "create", "update" ]
+  - apiGroups:
+      - rbac.authorization.k8s.io
+    resources:
+      - clusterroles
+      - clusterrolebindings
+    verbs: [ "get", "list", "create", "update" ]
+  - apiGroups:
+      - ""
+    resources:
+      - serviceaccounts
+    verbs: [ "get", "list", "create", "update" ]
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
