--- a/app/src/graalvm/resource-config.json
+++ b/app/src/graalvm/resource-config.json
@@ -128,7 +128,8 @@
     {"pattern":"\\Qzio/stream/ZTransducer.class\\E"}, 
     {"pattern":"\\Qzio/system/package$.class\\E"}, 
     {"pattern":"\\Qzio/system/package$System$Service$$anon$1.class\\E"},
-    {"pattern":"\\Qcrds/crd-coralogix-rule-group-set.yaml\\E"}
+    {"pattern":"\\Qcrds/crd-coralogix-rule-group-set.yaml\\E"},
+    {"pattern":"\\Qcrds/crd-coralogix-loggers.yaml\\E"}
   ]},
   "bundles":[]
 }
