--- a/charts/cx-operator/templates/rbac-config.yaml
+++ b/charts/cx-operator/templates/rbac-config.yaml
@@ -51,6 +51,12 @@ rules:
     resources:
       - serviceaccounts
     verbs: [ "get", "list", "create", "update" ]
+  - apiGroups:
+      - ""
+    resources:
+      - namespaces
+      - pods
+    verbs: ["get", "list", "watch"]
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
