--- a/app/src/graalvm/resource-config.json
+++ b/app/src/graalvm/resource-config.json
@@ -130,6 +130,7 @@
     {"pattern":"\\Qzio/system/package$System$Service$$anon$1.class\\E"},
     {"pattern":"\\Qcrds/crd-coralogix-rule-group-set.yaml\\E"},
     {"pattern":"\\Qcrds/crd-coralogix-loggers.yaml\\E"}
+    {"pattern":"\\Qcrds/crd-coralogix-alert-set.yaml\\E"}
   ]},
   "bundles":[]
 }
