Initial version of the AlertSet CRD (#19)
* Initial version of the AlertSet CRD

* DaysOfWeek enum

* zio-k8s 0.1.4

* New CRD added to native image resource config

* JSON fix

--- a/app/src/graalvm/resource-config.json
+++ b/app/src/graalvm/resource-config.json
@@ -129,7 +129,8 @@
     {"pattern":"\\Qzio/system/package$.class\\E"}, 
     {"pattern":"\\Qzio/system/package$System$Service$$anon$1.class\\E"},
     {"pattern":"\\Qcrds/crd-coralogix-rule-group-set.yaml\\E"},
-    {"pattern":"\\Qcrds/crd-coralogix-loggers.yaml\\E"}
+    {"pattern":"\\Qcrds/crd-coralogix-loggers.yaml\\E"},
+    {"pattern":"\\Qcrds/crd-coralogix-alert-set.yaml\\E"}
   ]},
   "bundles":[]
 }
