First implementation of the alert operator

--- a/app/src/main/resources/shared.conf
+++ b/app/src/main/resources/shared.conf
@@ -27,6 +27,16 @@ grpc {
       queueSize = 8192
       headers: {}
     }
+
+    alerts {
+      # name = "localhost"
+      # port = 9090
+      # token = "test"
+      deadline = 1 minute
+      parallelism = 4
+      queueSize = 8192
+      headers: {}
+    }
   }
 }
 
@@ -34,4 +44,5 @@ resources {
   defaultBuffer = 1024
   rulegroups = []
   coralogixLoggers = []
+  alerts = []
 }
