--- a/protodep.toml
+++ b/protodep.toml
@@ -3,3 +3,7 @@ proto_outdir = "./grpc-deps/target/protobuf_external_src"
 [[dependencies]]
 target = "github.com/coralogix/rules-api-protobuf/"
 revision = "v0.3"
+
+[[dependencies]]
+target = "github.com/coralogix/alerts-api-protobuf/"
+revision = "v0.4"
