Updated zio-k8s and added leader election

--- a/charts/cx-operator/templates/rbac-config.yaml
+++ b/charts/cx-operator/templates/rbac-config.yaml
@@ -57,6 +57,11 @@ rules:
       - namespaces
       - pods
     verbs: ["get", "list", "watch"]
+  - apiGroups:
+      - ""
+      resources:
+        - configmaps
+      verbs: [ "get", "list", "create", "update" ]
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
