--- a/charts/cx-operator/values.yaml
+++ b/charts/cx-operator/values.yaml
@@ -7,6 +7,8 @@ config:
   resources:
     defaultBuffer: 1024
     rulegroups: []
+    coralogixLoggers: []
+    alerts: []
 image:
   pullPolicy: IfNotPresent
   repository: coralogixrepo
