--- a/charts/cx-operator/templates/rbac-config.yaml
+++ b/charts/cx-operator/templates/rbac-config.yaml
@@ -31,6 +31,12 @@ rules:
       - coralogixloggers/finalizers
     verbs: ["get", "watch", "update"]
   - apiGroups:
+      - coralogix.com
+    resources:
+      - alertsets
+      - alertsets/status
+    verbs: ["get", "watch", "update"]
+  - apiGroups:
       - apiextensions.k8s.io
     resources:
       - customresourcedefinitions
