User-defined order for rule groups

--- a/crds/crd-coralogix-rule-group-set.yaml
+++ b/crds/crd-coralogix-rule-group-set.yaml
@@ -37,6 +37,9 @@ spec:
                         type: boolean
                       hidden:
                         type: boolean
+                      order:
+                        type: integer
+                        format: int32
                       matcher:
                         type: object
                         properties:
