Connect api keys operator in main
* add TODOs/ ??? all over the place to make it compile

--- a/app/src/graalvm/resource-config.json
+++ b/app/src/graalvm/resource-config.json
@@ -131,7 +131,7 @@
     {"pattern":"\\Qcrds/crd-coralogix-rule-group-set.yaml\\E"},
     {"pattern":"\\Qcrds/crd-coralogix-loggers.yaml\\E"},
     {"pattern":"\\Qcrds/crd-coralogix-alert-set.yaml\\E"},
-    {"pattern":"\\Qcrds/crd-coralogix-users-set.yaml\\E"}
+    {"pattern":"\\Qgrpc-deps/target/scala-2.13/src_managed/main/com/coralogix/users/v2beta1/ApiKeyCRDSchema.yaml\\E"}
   ]},
   "bundles":[]
 }
