--- a/charts/cx-operator/templates/rbac-config.yaml
+++ b/charts/cx-operator/templates/rbac-config.yaml
@@ -67,7 +67,7 @@ rules:
       - ""
     resources:
       - configmaps
-    verbs: [ "get", "list", "create", "update" ]
+    verbs: [ "get", "list", "create", "update", "delete" ]
 ---
 
 apiVersion: rbac.authorization.k8s.io/v1
