--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,8 @@ jobs:
         with:
           context: .
           file: ./Dockerfile
-          push: ${{ github.ref == 'refs/heads/master' }}
+          #push: ${{ github.ref == 'refs/heads/master' }}
+          push: true
           #tags: ${{ steps.docker_meta.outputs.tags }}
           tags: 0.3.8
           labels: ${{ steps.docker_meta.outputs.labels }}
